# lyra

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.walden/: constitution.md  lessons.md
.walden/specs/opencode-karpathy-wiki/: design.md  requirements.md  tasks.md
hooks/claude-code/: session-end.mjs
src/lyra/: __init__.py  brief.py  cli.py  compile_pipeline.py  config.py  file_cmd.py  ids.py  ingest.py  install.py  lint.py  markdown.py  query.py  relations.py  vault.py
src/lyra/extract/: __init__.py  heuristic.py  llm.py
src/lyra/index/: __init__.py  graph_projection.py  qmd_index.py
src/lyra/session/: opencode.py
src/lyra/sources/: __init__.py  agentmemory.py  base.py  karpathy_wiki.py  mcp_memory.py  obsidian_tasks.py  plain_markdown.py
src/lyra/templates/: AGENTS.md  SKILL.md  session-start.mjs
tests/: conftest.py  test_agents_template.py  test_auto_supersession.py  test_brief.py  test_brief_pending_count.py  test_compile.py  test_compile_extraction.py  test_compile_imperative.py  test_entity_model.py  test_file_cmd.py  test_graph_projection.py  test_heuristic_extractor.py  test_ingest.py  test_init.py  test_install.py  test_lint.py  test_litellm_provider.py  test_network_sources.py  test_obsidian_tasks_source.py  test_opencode_session.py  test_plain_markdown_source.py  test_pre_existing_vault.py  test_qa_filing.py  test_qmd_integration.py  test_query.py  test_relations.py  test_skill_template.py  test_source_cli.py  test_source_contract.py  test_source_registry.py
